force-app/main/default/objects/Q_s_A_s_How_To__c/Q_s_A_s_How_To__c.object-meta.xml
<CustomObject>
    <description>IM Customer Center - This object is used by Ops Admin to define Ques and Ans or &quot;How to&quot; guides/tutorials which will populate on the Customer Portal</description>
    <label>Q’s &amp; A’s/How To</label>
    <nameField>
        <displayFormat>QA - {000000}</displayFormat>
        <label>Q’s &amp; A’s/How To Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Q’s &amp; A’s/How To</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>