force-app/main/default/objects/Q_s_A_s_How_To__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines whether it will show on Portal or Not</description>
    <label>Visible</label>
    <type>Checkbox</type>
</CustomField>