force-app/main/default/objects/Q_s_A_s_How_To__c/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <description>Defines Answer set by Ops Admin to show on FAQ Standard Tab</description>
    <label>Answer</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>