force-app/main/default/objects/Q_s_A_s_How_To__c/fields/Event_Tab__c.field-meta.xml
<CustomField>
    <fullName>Event_Tab__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Defines for which Tab it will show</description>
    <label>Event Tab</label>
    <referenceTo>Event_Tabs__c</referenceTo>
    <relationshipLabel>Q’s &amp; A’s/How To</relationshipLabel>
    <relationshipName>Q_s_A_s_How_To</relationshipName>
    <type>Lookup</type>
</CustomField>