force-app/main/default/objects/Q_s_A_s_How_To__c/fields/HyperLink__c.field-meta.xml
<CustomField>
    <fullName>HyperLink__c</fullName>
    <description>Ops Admin can defines Urls for &quot;guidelines/How to&quot; which will show on the Customer Portal</description>
    <label>HyperLink</label>
    <type>Url</type>
</CustomField>