force-app/main/default/objects/Q_s_A_s_How_To__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <description>Defines the Label for &quot;How to&quot; Links</description>
    <label>Label</label>
    <type>TextArea</type>
</CustomField>