force-app/main/default/objects/Q_s_A_s_How_To__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <description>Defines Question set by Ops Admin to show on FAQ Standard Tab</description>
    <label>Question</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>