force-app/main/default/objects/Q_s_A_s_How_To__c/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <description>It Defines the Sequence of QandA or How To Links which will appear accordingly on Community Portal</description>
    <label>Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>