force-app/main/default/objects/Q_s_A_s_How_To__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Define which type of data Ops Admin will define to show on Customer Portal</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FAQ</fullName>
            </value>
            <value>
                <fullName>How to</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>