force-app/main/default/objects/Q_s_A_s_How_To__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Event_Tab__c</columns>
    <columns>Type__c</columns>
    <columns>Sequence__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>